...

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/infos_utilisateur">
                    <TextView
                        android:id="@+id/cardview_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Neighbours_Details_Cardview"
                        android:text="Nom"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
...
    </android.support.v4.widget.NestedScrollView>




    <android.support.design.widget.FloatingActionButton
        android:id="@+id/neighbour_favorite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#FFFFFF"
        android:layout_margin="8dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right|end"
...
